Some corrections/improvements

--- a/app/views/inquiries/show.html.erb
+++ b/app/views/inquiries/show.html.erb
@@ -19,4 +19,4 @@
 </p>
 
 <%= link_to 'Edit', edit_inquiry_path(@inquiry) %> 
-<%= link_to 'Back', inquirys_path %>
+<%= link_to 'Back', inquiries_path %>
