--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -1,13 +1,15 @@
-<%= form_woth model: @inquiry, local: true do |form| %>
+<%= form_with model: @inquiry, local: true do |form| %>
   
   <% if @inquiry.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(@inquiry.errors.count, "error") %> prohibited this inquiry from being saved:
+        <%= pluralize(@inquiry.errors.count, "error") %> 
+          prohibited this inquiry from being saved:
       </h2>
       <ul>
         <% @inquiry.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+          <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
