--- a/app/views/inquiries/index.html.erb
+++ b/app/views/inquiries/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Inquirys</h1>
+<h1>Listing inquiries</h1>
 
 <%= link_to 'New inquiry', new_inquiry_path %>
 <table>
@@ -16,7 +16,7 @@
       <td><%= inquiry.description %></td>
       <td><%= inquiry.customer_id %></td>
       <td><%= inquiry.admin_id %></td>
-      <td><%= link_to 'Show', inquirys_path(inquiry) %></td>
+      <td><%= link_to 'Show', inquiries_path(inquiry) %></td>
       <td><%= link_to 'Edit', edit_inquiry_path(inquiry) %></td>
       <td><%= link_to 'Destroy', inquiry_path(inquiry), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
